# project-montage

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh-CN.md  ruff.toml
mcp_client/: .env.example  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt  server.py
mcp_client/adk/: __init__.py
mcp_client/adk/project_montage/: __init__.py  agent.py  system_prompt.py
mcp_client/frontend/: grid-data.js  index.html  utils.js
mcp_client/shared/: constants.py
mcp_client/utils/: state.py  storage.py
mcp_montage/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  app.yaml  config.yaml  pyproject.toml  requirements.txt  server.py  sync_fonts_from_third_party.sh
mcp_montage/schemas/: __init__.py  config.py  file.py  image.py  media.py  storyboard.py  video.py
mcp_montage/services/: audio_service.py  image_service.py  lyria_service.py  video_service.py
mcp_montage/services/agents/: base_agent.py  factory.py  image_agent.py  text_agent.py  video_agent.py
mcp_montage/services/agents/config/: __init__.py  prompt_loader.py
mcp_montage/services/agents/config/core_prompt/: asset_selector.py  describing_image.py  generative_cropping.py  image_prompt_builder.py  music_prompt_builder.py  narrative_writer.py  storyboard_writer.py  video_prompt_builder.py
mcp_montage/services/agents/config/specific_prompt/: image_constraints_nanobanana_prompt.md  image_constraints_prompt.md  storyboard_constraints_prompt.md  video_constraints_prompt.md
mcp_montage/shared/: config.py  constants.py
mcp_montage/tools/: __init__.py  asset_selector.py  concatenate_videos.py  generate_bgm_and_merge.py  generate_image.py  generate_scene_narratives.py  generate_storyboard.py  generate_video.py
mcp_montage/utils/: __init__.py  ffmpeg.py  google_api.py  image.py  log.py  server.py  storage.py
sign_server/: .env.example  .gcloudignore  README.md  app.yaml  pyproject.toml  requirements.txt  server.py
