# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "mcp-montage"
version = "0.4.0"
description = "Project Montage: An open-source project for AI video generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.46.0",
    "google-cloud-storage>=3.7.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "mcp>=1.24.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel<7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
lint = [
    "ruff>=0.14.7",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["schemas", "services", "shared", "utils", "tools"]

[tool.uv]
package = true
